[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { path = "/home/ferrislav/projects/rust/github/anchor/lang", features = ["init-if-needed"]}
anchor-spl = { path = "/home/ferrislav/projects/rust/github/anchor/spl"}
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.14.18"
winnow="=0.4.1"
toml_datetime="=0.6.1"