[package]
name = "wba-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wba_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"]}
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git" }
toml_datetime = "0.6.1"
# solana-program = "1.14.18"
